<resources>
    <string name="app_name">Darussalam</string>
    <string name="google_key" translatable="false">AIzaSyDcQMzx_8YWy2DD-kgcoYlu0efsJOo2VM4</string>
    <string name="no_data">No Data</string>
    <string name="pending">Pending</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_ups">Sign Up</string>
    <string name="login">Login</string>
    <string name="to_reading_books_when_you_are_not_connected_to_the_internet_you_will_need_to_download_them_from_them_to_your_device">To reading books when you are not\nconnected to the internet you will need to\ndownload them from them to your device</string>
    <string name="enjoy_reading_offline">Enjoy Reading offline</string>
    <string name="create_a_personal_library">Create a personal library</string>
    <string name="all_the_books_that_you_ve_purchased_will_remain_forever_in_your_personal_library_which_can_be_accessed_from_any_device">All the books that you’ve purchased will\nremain forever in your personal library,\nwhich can be accessed from any device</string>
    <string name="search_purchase">Search &amp; Purchase</string>
    <string name="using_search_filters_quickly_and_easily_find_the_books_you_need_buy_books_at_the_best_price_on_market">Using Search Filters, quickly and easily find\nthe books you need. Buy Books at the best\nprice on market</string>
    <string name="get_started">Get started</string>
    <string name="more_5000_islamic_books_available_on_store">More 5000+ Islamic Books available\nOn Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="or">Or</string>
    <string name="Register">Register</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_your_email_so_we_can_send_you_opt">Verify your email so we can send you\nOPT</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify">Verify</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_otp_sent_on_your_mail">Please enter OTP sent on your mail</string>
    <string name="submit">Submit</string>
    <string name="otp_not_received">OTP not Received?</string>
    <string name="resend"><u>RESEND</u></string>
    <string name="reset_now">Reset Now</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="more">More</string>
    <string name="darussalam">DARUSSALAM</string>
    <string name="what_would_you_like_to_read">What would you like to read?</string>
    <string name="search_title_top_ic_or_author">Search title, topic or author</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="see_all">See All</string>
    <string name="categories">Categories</string>
    <string name="best_seller">Best Seller</string>
    <string name="guest">Guest</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="pakistan">Pakistan</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="terms_conditions_privacy_policy"><![CDATA[Terms & Conditions | Privacy Policy]]></string>
    <string name="darussalam_publishers_2022">Darussalam Publishers. @ 2022</string>
    <string name="hello_guest">Hello Guest !</string>
    <string name="this_field_is_required">This field is required. </string>
    <string name="password_not_match">Password not match. </string>
    <string name="stories_of_the_prophets_in_english">Stories of the Prophets in English</string>
    <string name="by">By.</string>
    <string name="safiur_rahman"><u>Safiur Rahman</u></string>
    <string name="publisher">Publisher</string>
    <string name="ratings">Ratings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="compare">Compare</string>
    <string name="about_the_book">About the book</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipis_cing_elit_morbi_viverra_lacus_nulla_id_dignissim_odio_biben_dum_et_curabitur_condimentum_urna_ut_euismod_mollis_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_morbi_viverra_lacus_nulla_id_dignissim_odio_biben_dum_et_curabitur_condimentum_urna_ut_euismod_mollis_ante_lacus_pretium_urna_vel_iaculis_orci_arcu_quis_purus_aenean_nibh_quam_lacinia_eget_dolor_vel_elementum_facilisis_massa_donec_id_pellentesque">Lorem ipsum dolor sit amet, consectetur adipis cing elit. Morbi viverra lacus nulla, id dignissim odio biben dum et. Curabitur condimentum, urna ut euismod mollis. \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi viverra lacus nulla, id dignissim odio biben dum et. Curabitur condimentum, urna ut euismod mollis, ante lacus pretium urna, vel iaculis orci arcu quis purus. Aenean nibh quam, lacinia eget dolor vel, elementum facilisis massa. Donec id pellentesque.</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="pages">Pages</string>
    <string name="read_more"><u>Show more</u></string>
    <string name="show_less"><u>Show less</u></string>
    <string name="language">Language</string>
    <string name="author">Author</string>
    <string name="book_color">Book Color</string>
    <string name="book_cover">Book Cover</string>
    <string name="age_groups">Age Groups</string>
    <string name="size_cm">Size cm</string>
    <string name="isbn">ISBN</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="my_cart">My Cart</string>
    <string name="remove_all_items">(Remove all items)</string>
    <string name="sub_total">Sub total</string>
    <string name="vat">VAT</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="contact_details">Contact Details</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street_address">Street address</string>
    <string name="confirm_payment_method">Confirm Payment Method</string>
    <string name="pay_now">Pay Now</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="card_number">Card Number</string>
    <string name="your_order_is_confirmed">Your Order is\nConfirmed!</string>
    <string name="thank_you_for_your_order">Thank you for your order</string>
    <string name="your_order_id">Your order ID</string>
    <string name="back_to_home">Back to Home</string>

</resources>