<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_auth_back"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_back_second"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white" />


        <com.dtech.darussalam.utilities.helper.TypeFaceTextView
            android:id="@+id/tvLogin"
            android:text="@string/verify_email"
            android:theme="@style/NunitoBold"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
           app:layout_constraintBottom_toTopOf="@+id/tvVerifyYourEmail"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.dtech.darussalam.utilities.helper.TypeFaceTextView
            android:id="@+id/tvVerifyYourEmail"
            android:text="@string/verify_your_email_so_we_can_send_you_opt"
            android:layout_marginTop="@dimen/_10sdp"
            android:theme="@style/NunitoBold"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/clEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/clEmailAddress"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/ic_white_rorner"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize">


            <ImageView
                android:id="@+id/ivEmailAddress"
                android:src="@drawable/ic_email_address"
                android:layout_marginStart="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_14sdp"/>


            <EditText
                android:id="@+id/edEmailAddress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/NunitoRegular"
                android:background="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/_15sdp"
                android:textSize="@dimen/_13ssp"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email_here"
                android:paddingBottom="@dimen/_2sdp"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:layout_marginStart="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivEmailAddress"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.dtech.darussalam.utilities.helper.TypeFaceButton
            android:id="@+id/btnVerifyEmail"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_button_design"
            app:layout_constraintTop_toBottomOf="@+id/clEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/verify"
            android:textSize="@dimen/_14ssp"
            style="@style/NunitoBold"
            android:layout_height="@dimen/_40sdp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>