<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent">

   <!-- <androidx.cardview.widget.CardView

        android:layout_gravity="center"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivOrderConfirm"
                android:background="@drawable/ic_order_confirm_icon"
                android:layout_marginTop="@dimen/_80sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                android:id="@+id/tvYourOrderConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/NunitoSansExtraBold"
                android:textColor="@color/text_color"
                android:gravity="center"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/your_order_is_confirmed"
                app:layout_constraintTop_toBottomOf="@+id/ivOrderConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                android:id="@+id/tvThankYouFor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/NunitoSansSamiBold"
                android:text="@string/thank_you_for_your_order"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvYourOrderConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                android:id="@+id/tvOrderId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/NunitoSansSamiBold"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@+id/tvThankYouFor"
                android:text="@string/your_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                android:id="@+id/tvOrderNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="1234DF"
                style="@style/NunitoSansExtraBold"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.dtech.darussalam.utilities.helper.TypeFaceButton
                android:id="@+id/btnBackToHome"
                style="@style/NunitoBold"
                android:layout_marginBottom="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvOrderId"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/ic_confirm_payment_method"
                android:text="@string/back_to_home"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <!--</androidx.cardview.widget.CardView>-->


</LinearLayout>