<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeaderProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/ic_profile_header"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:scaleType="centerCrop"
                    android:id="@+id/ivProfile"
                    android:background="@drawable/ic_profile_place_holder"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"/>

                <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/NunitoBold"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_marginEnd="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/ic_closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clHeaderProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@color/search_color"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp">

                    <ImageView
                        android:id="@+id/ivSaudiFrag"
                        android:layout_marginStart="@dimen/_15sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/ic_saudi_flag"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"/>

                    <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                        style="@style/NunitoBold"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        app:layout_constraintStart_toEndOf="@+id/ivSaudiFrag"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/saudi_arabia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_marginEnd="@dimen/_15sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@drawable/ic_select_contry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp">

                    <ImageView
                        android:id="@+id/ivPakFrag"
                        android:layout_marginStart="@dimen/_15sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/ic_pak_flag"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"/>

                    <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                        style="@style/NunitoBold"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        app:layout_constraintStart_toEndOf="@+id/ivPakFrag"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/pakistan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </androidx.constraintlayout.widget.ConstraintLayout>


                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_guest_user"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_160sdp"/>

                <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                    style="@style/NunitoBold"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/hello_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.dtech.darussalam.utilities.helper.TypeFaceButton
                    android:layout_marginTop="@dimen/_20sdp"
                    style="@style/NunitoBold"
                    android:textSize="@dimen/_14ssp"
                    android:textAllCaps="false"
                    android:text="@string/login_to_your_account"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/ic_button_gradiant"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"/>

                <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                    style="@style/NunitoRegular"
                    android:textSize="@dimen/_8ssp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:textColor="@color/privacy_color"
                    android:text="@string/terms_conditions_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.dtech.darussalam.utilities.helper.TypeFaceTextView
                    style="@style/NunitoBold"
                    android:textSize="@dimen/_8ssp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:textColor="@color/button_text_color"
                    android:text="@string/darussalam_publishers_2022"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>